// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Avatar /> component match snapshot on 24px size (initials) 1`] = `
<div
  class="sc-AykKC iJucbB"
  color="white"
  font-size="11"
  size="24"
>
  J
</div>
`;

exports[`<Avatar /> component match snapshot on 40px size (image src) 1`] = `
<div
  class="sc-AykKC duvJcy"
  color="white"
  font-size="16"
  size="40"
>
  <img
    alt="User Avatar"
    src="https://upload.wikimedia.org/wikipedia/commons/d/d0/Nikola-tesla-3909844.jpg"
  />
</div>
`;

exports[`<Avatar /> component match snapshot on 40px size (initials) 1`] = `
<div
  class="sc-AykKC duvJcy"
  color="white"
  font-size="16"
  size="40"
>
  JS
</div>
`;
